<?xml version="1.0" encoding="utf-8"?>
<TableLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:gravity="center_vertical" android:layout_height="wrap_content" android:layout_width="wrap_content">
	<TableRow android:layout_width="wrap_content" android:id="@+id/tableRow2" android:layout_height="match_parent" android:baselineAligned="false" android:layout_marginTop="20dp">
		<LinearLayout android:layout_width="wrap_content" android:orientation="vertical" android:id="@+id/linearLayout6" android:layout_height="wrap_content">
			<LinearLayout android:orientation="vertical" android:id="@+id/linearLayout1" android:layout_width="wrap_content" android:layout_height="match_parent">
				<TextView android:id="@+id/textViewUser" android:layout_gravity="top" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:text="@string/email_address"></TextView>
				<EditText android:layout_gravity="top" android:layout_height="wrap_content" android:id="@+id/editTextUser" android:inputType="textEmailAddress" android:minLines="1" android:hint="Email Address" android:layout_width="318dp"></EditText>
			</LinearLayout>
			<LinearLayout android:layout_height="wrap_content" android:orientation="vertical" android:id="@+id/linearLayout2" android:layout_width="wrap_content">
				<TextView android:id="@+id/textViewPassword" android:text="@string/password" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content"></TextView>
				<EditText android:layout_height="wrap_content" android:id="@+id/editTextPassword" android:inputType="textPassword" android:minLines="1" android:hint="Password" android:layout_width="318dp"></EditText>
			</LinearLayout>
		</LinearLayout>
	</TableRow>
	<TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
		<LinearLayout android:layout_width="wrap_content" android:orientation="vertical" android:id="@+id/linearLayout5" android:layout_height="wrap_content" android:layout_marginTop="20dp">
			<CheckBox android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:id="@+id/checkBoxRememberEmail" android:text="@string/remember_email" android:layout_width="192dp" android:checked="true"></CheckBox>
			<CheckBox android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:id="@+id/checkBoxRememberPassword" android:text="@string/remember_password" android:layout_width="wrap_content" android:checked="true"></CheckBox>
		</LinearLayout>
	</TableRow>
	<TableRow android:id="@+id/tableRow7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:baselineAligned="false">
		<LinearLayout android:layout_width="wrap_content" android:orientation="vertical" android:id="@+id/linearLayout3" android:layout_height="wrap_content">
			<Button android:layout_height="wrap_content" android:id="@+id/buttonLogin" android:text="@string/login" android:layout_gravity="center_horizontal" android:layout_width="wrap_content"></Button>
			<Button android:layout_height="wrap_content" android:id="@+id/buttonRegisterUser" android:text="@string/regist" android:layout_width="wrap_content" android:layout_gravity="center_horizontal"></Button>
		</LinearLayout>
	</TableRow>
	<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tableRow6" android:layout_marginTop="20dp">
		<TextView android:id="@+id/textViewForget" android:text="@string/forget" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
	</TableRow>
</TableLayout>
