<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content" android:layout_height="wrap_content">
	<TextView android:text="@string/title" android:layout_height="wrap_content" android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"></TextView>
	<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_below="@+id/textView1" android:layout_alignParentRight="true" android:layout_marginRight="80dp" android:layout_marginTop="176dp" android:weightSum="1">
		<Button android:text="@string/buy" android:layout_gravity="center" android:layout_width="72dp" android:layout_height="match_parent" android:id="@+id/buyButton"></Button>
	</LinearLayout>
	<LinearLayout android:layout_width="wrap_content" android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_alignTop="@+id/linearLayout1" android:layout_centerHorizontal="true" android:orientation="vertical">
		<Button android:text="@string/sell" android:layout_gravity="top" android:layout_width="70dp" android:layout_height="wrap_content" android:id="@+id/sellButton"></Button>
	</LinearLayout>


</RelativeLayout>
